--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "api",
+  "name": "gtc-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "API para o site do GTC",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Moisés",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "@prisma/client": "^6.7.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "prisma": "^6.7.0"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.7.0",
+    "zod": "^4.1.11"
   }
 }
